Melhorias na configuração do Docker para aumentar a segurança e a eficiência do build. - feat: Adiciona o arquivo .dockerignore para otimizar o contexto do build. - fix: Remove o parâmetro 'server.enableCORS' obsoleto do comando do Streamlit. - security: Altera a execução no Dockerfile para utilizar um usuário não-root.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     container_name: analise_materiais_interface
     depends_on:
       - api
-    command: python -m streamlit run app_interface.py --server.port 8501 --server.address 0.0.0.0 --server.enableCORS false
+    command: python -m streamlit run app_interface.py --server.port 8501 --server.address 0.0.0.0
     ports:
       - "8501:8501"
     volumes:
