Reestrutura o processo de retreinamento do modelo para um padrão de arquitetura de microserviços, utilizando uma fila de mensagens para desacoplar tarefas pesadas da API principal.
- feat: Adiciona Celery para gerenciar tarefas assíncronas e um novo serviço 'worker' para executar o retreinamento do modelo.
- feat: Integra o RabbitMQ como message broker para enfileirar as tarefas de retreinamento, aumentando a resiliência do sistema.
- docs: Atualiza o README.md com a nova arquitetura, tecnologias e instruções detalhadas de execução (Docker e local).
- refactor: Modifica o endpoint de feedback na API para publicar uma tarefa na fila em vez de usar uma thread local.
- feat(ui): Melhora a interface do Streamlit com um formulário de feedback sempre visível e a capacidade de refazer a busca com os dados corrigidos.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,41 @@
 services:
+  # Serviço do RabbitMQ (Message Broker)
+  rabbitmq:
+    image: rabbitmq:3.9-management-alpine
+    container_name: rabbitmq
+    environment:
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASS}    
+    ports:
+      - "5672:5672"  # Porta para a API e worker se comunicarem
+      - "15672:15672" # Porta para a interface de gerenciamento web do RabbitMQ
+
   # Serviço da API FastAPI
   api:
-    build: .  
+    build: .
     container_name: analise_materiais_api
     env_file:
-      - .env  
+      - .env
     command: >
-      sh -c "python -m uvicorn pesquisa_por_similaridade.main:app --host 0.0.0.0 --port 8000"
+      sh -c "python pesquisa_por_similaridade/treinamento_chat/treinar_modelo.py && 
+             python -m uvicorn pesquisa_por_similaridade.main:app --host 0.0.0.0 --port 8000 --reload"
     ports:
-      - "8000:8000" 
+      - "8000:8000"
     volumes:
       - .:/app
+    depends_on:
+      - rabbitmq
+
+  # Serviço do Worker Celery
+  worker:
+    build: .
+    container_name: analise_materiais_worker
+    command: python -m celery -A pesquisa_por_similaridade.celery_worker worker --loglevel=info
+    volumes:
+      - .:/app
+    depends_on:
+      - rabbitmq
+      - api 
 
   # Interface Streamlit
   interface:
